[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
metaphy_network = { path = "../MetaphyNetwork", features = ["user"] }
tokio = { version = "*", features = ["full", "rt"] }
futures = "0.3.30"
# log = "0.4.21"
# env_logger = "0.11.3"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }