[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[features]

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}
libp2p = { version = "0.53.2", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "identify",
    "ping",
    "mdns",
    "relay",
    "dcutr",
    "rendezvous",
    "kad",
] }
log = "0.4.21"
tokio = { version = "*", features = ["rt-multi-thread", "sync", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }